# aicore-router

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Makefile  README.md  run_e2e_tests.sh
.claude/skills/probe-anthropic-betas/: SKILL.md
.github/workflows/: build.yml  release.yml
examples/: config.yaml
scripts/: mitm-anthropic.mjs  probe-bedrock-betas.sh
specs/: cmd.md  get-deployments.md  stats.md
src/: balancer.rs  cli.rs  client.rs  commands.rs  config.rs  constants.rs  database.rs  errors.rs  lib.rs  metrics.rs  proxy.rs  quota.rs  rate_limit.rs  registry.rs  request_limiter.rs  resolver.rs  routes.rs  table.rs  token.rs  tui.rs
src/transforms/: anthropic.rs  gemini.rs  mod.rs  openai.rs  openai_responses.rs  stream_classify.rs
tests/: e2e_tests.rs
tests/harness/: assertions.rs  client.rs  config_synth.rs  mod.rs  process.rs  sse.rs
tests/scenarios/: auth.rs  claude.rs  db_logging.rs  gemini.rs  health.rs  limits.rs  mod.rs  model_resolution.rs  openai_chat.rs  openai_responses.rs  routing.rs  streaming.rs
