[package]
name = "aicore-router"
version = "0.4.0"
edition = "2024"
repository = "https://github.com/iberryful/aicore-router"

[features]
e2e = []

[[bin]]
name = "acr"
path = "src/bin/acr.rs"

[dependencies]
tokio = { version = "1.46", features = ["rt", "net", "rt-multi-thread"] }
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = [
    "json",
    "stream",
    "rustls-tls",
], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
tokio-stream = "0.1"
uuid = { version = "1.17", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.14"
tokio-test = "0.4"
hyper = "1.0"
