[package]
name = "aicore-router"
version = "0.7.4"
edition = "2024"
repository = "https://github.com/iberryful/aicore-router"

[features]
default = ["tui"]
e2e = []
tui = ["ratatui", "crossterm"]
db = ["rusqlite"]

[[bin]]
name = "acr"
path = "src/bin/acr.rs"

[dependencies]
tokio = { version = "1.46", features = ["rt", "net", "rt-multi-thread", "signal", "macros"] }
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
reqwest = { version = "0.12", features = [
    "json",
    "stream",
    "rustls-tls",
], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
tokio-stream = "0.1"
uuid = { version = "1.17", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
subtle = "2.6"
sha2 = "0.10"
rusqlite = { version = "0.34", features = ["bundled"], optional = true }
ratatui = { version = "0.29", optional = true, features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.28", optional = true }
shellexpand = "3.1.2"
comfy-table = "7"
governor = "0.10.4"
regex = "1.12.3"

[profile.release]
strip = true
lto = true

[dev-dependencies]
tempfile = "3.14"
tokio-test = "0.4"
hyper = "1.0"
